# VisionTrack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.sample.txt
data/upload/: test1.webm  test2.webm
docs/: folder_structure.md  tech_specs.md  user_guide.md
docs/UML Diagrams/: class_diagrams.puml  component_diagram.puml  sequence_diagram.puml
src/: config.cpp  config.h  main.cpp
src/core/: classifier.cpp  classifier.h  detection.cpp  detection.h  hungarian.cpp  hungarian.h  tracking.cpp  tracking.h
src/ui/: interface.cpp  interface.h
src/util/: alerts.cpp  alerts.h  video.cpp  video.h
tests/: CMakeLists.txt  test_alerts.cpp  test_config.cpp  test_config.h  test_detection.cpp  test_tracking.cpp
